Fix logo size overlapping nav-trigger on iPhone

--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -32,7 +32,7 @@
         background-repeat: no-repeat;
 
         // Logo size
-        width: 100%;
+        width: 80px;
         height: 80px;
       }
     }
